--- a/skibidi_cuckoo_iot_midterm/project.properties
+++ b/skibidi_cuckoo_iot_midterm/project.properties
@@ -2,3 +2,5 @@ name=skibidi_cuckoo_iot_midterm
 #assetOtaDir=assets
 dependencies.IoTClassroom_CNM=1.1.2
 dependencies.neopixel=1.0.4
+dependencies.Adafruit_SSD1306=0.0.2
+dependencies.DFRobotDFPlayerMini=1.0.1
